# English-IA

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  poml-lint.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_topics_prompt.py
app/: __init__.py  main.py
app/repo/: __init__.py  dao.py  db.py  models.py  schemas.py  seed.py
app/routers/: __init__.py  auth.py  chat.py  dashboard.py  flashcards.py  practice.py  quiz.py  reports.py  sessions.py  settings.py  stats.py  voice_ws.py
app/schemas/: chat.py  dashboard.py  flashcard.py  practice.py  quiz.py  report.py  session.py  settings.py
app/services/: __init__.py  llm.py  parser.py  poml_runtime.py  srs.py  tts_stub.py
app/services/evaluation/: __init__.py  errors.py  quizgen.py  report.py  srs.py
app/services/llm/: __init__.py  base.py  ollama.py  openai.py  registry.py  simple_mock.py
app/utils/: __init__.py  config.py  ids.py  logger.py  time.py
app/ws/: __init__.py  call.py
docker/: Dockerfile.api  Dockerfile.web  compose.yml
docs/: ARCHITECTURE.md  POML.md
legacy/prompts/: flashcard-gen.poml  quiz-gen.poml
legacy/web/: streamlit_app.py
prompts/: call-coach.poml  cefr_rubric.poml  chat-correct.poml  correction.poml  flashcard-gen.poml  quiz-gen.poml  tutor_roleplay.poml
tests/: conftest.py  test_chat_contract.py  test_errors.py  test_health.py  test_quizgen.py  test_report.py  test_settings.py  test_srs.py
tools/: poml_lint.py  seed_demo.py
web/: streamlit_app.py
